[package]
name = "calar"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Chernigin", "Daniil Koveshnikov"]
description = "Saratov State University schedule in iCalendar format"
homepage = "https://calar.ru/"

[dependencies]
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.1.8", features = ["derive"] }
directories = "4.0.1"
icalendar = { version = "0.15.4", features = ["chrono-tz"] }
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.2"
