[package]
name = "calar"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Michael Chernigin", "Daniil Koveshnikov"]
description = "Saratov State University schedule in iCalendar format"
homepage = "https://calar.ru/"

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.3.1", features = ["rustls"] }
chrono = "0.4.23"
chrono-tz = "0.8.1"
clap = { version = "4.1.8", features = ["derive"] }
directories = "5.0.0"
icalendar = { version = "0.15.4", features = ["chrono-tz"] }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.94"
log = { version = "^0.4.17", features = ["std"] }
simple_logger = { version = "4.1.0", features = ["colors", "timestamps", "stderr"] }
thiserror = "1.0.40"
